# vsts

./: .gitignore  CMakeLists.txt  README.md  build.py  build.sh  flake.nix  rebuild_all.txt
.github/: FUNDING.yml
.github/workflows/: CRMBL_build.yml  ClickBox_build.yml  MPaint_build.yml  PNCH_build.yml  Pisstortion_build.yml  PlasticFuneral_build.yml  Prisma_build.yml  RedBass_build.yml  SunBurnt_build.yml  VU_build.yml  clickbox_build.yml  crmbl_build.yml  dietaudio_build.yml  fmplus_build.yml  magiccarpet_build.yml  modman_build.yml  mpaint_build.yml  pisstortion_build.yml  plasticFuneral_build.yml  plasticfuneral_build.yml  pnch_build.yml  prisma_build.yml  proto_build.yml  redbass_build.yml  scope_build.yml  sucrose_build.yml  sunburnt_build.yml  tripled_build.yml  vu_build.yml
CRMBL/source/: CMakeLists.txt  CRMBL.jucer  build.bat  build.sh
ClickBox/source/: CMakeLists.txt  ClickBox.jucer  (+2 more)
Modules/: CMakeLists.txt
Pisstortion/source/: CMakeLists.txt  Pisstortion.jucer  build.bat  build.sh
Pisstortion/source/Source/: DCFilter.cpp  DCFilter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/: CMakeLists.txt
Plugins/MPaint/: CMakeLists.txt
Plugins/MPaint/Source/: CoolLogger.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/Pisstortion/: CMakeLists.txt
Plugins/Pisstortion/Source/: CoolLogger.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/RedVJ/: CMakeLists.txt
Plugins/RedVJ/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  includes.h
Prisma/source/: CMakeLists.txt  build.bat  build.sh
Prisma/source/Source/: DCFilter.cpp  DCFilter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Red Bass/source/: CMakeLists.txt  Red Bass.jucer  build.bat  build.sh
Red Bass/source/Source/: CoolLogger.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  envelopefollower.cpp  envelopefollower.h  includes.h
RedVJ/source/: CMakeLists.txt  RedVJ.jucer  build.bat  build.sh
RedVJ/source/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
RedVJ/source/Source/lua-5.4.3/: lvm.c
Setup/: CRMBL.xml  Clickbox.iss  Crmbl Free.iss  Crmbl.iss  Everything Bundle.iss  MPaint.iss  PNCH Free.iss  PNCH.iss  Pisstortion Free.iss  Pisstortion.iss  Plastic Funeral Free.iss  Plastic Funeral.iss  Prisma Free.iss  Prisma.iss  Red Bass Free.iss  Red Bass.iss  SunBurnt Free.iss  SunBurnt.iss  VU Free.iss  VU.iss  clickbox.iss  crmbl.iss  mpaint.iss  pisstortion free.iss  pisstortion.iss  plastic funeral free.iss  plastic funeral.iss  pnch.iss  prisma.iss  productbuild.py  red bass.iss  vu free.iss  vu.iss
modules/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/clickbox/: CMakeLists.txt
plugins/clickbox/source/: editor.cpp  editor.h  includes.h  processor.cpp
plugins/crmbl/: CMakeLists.txt
plugins/crmbl/source/: dcfilter.cpp  editor.cpp  editor.h  processor.cpp  processor.h
plugins/dietaudio/: CMakeLists.txt
plugins/dietaudio/scripts/: calcfont.py
plugins/dietaudio/source/: editor.cpp  editor.h  envelopefollower.cpp  envelopefollower.h  perlin.cpp  perlin.h  processor.cpp  processor.h
plugins/fmplus/: CMakeLists.txt
plugins/fmplus/source/: curves.cpp  curves.h  editor.cpp  editor.h  functions.cpp  functions.h  includes.h  midihandler.cpp  midihandler.h  oscillator.h  processor.cpp  processor.h
plugins/fmplus/themes/: 5grams.ini  contrast.ini  dark.ini  default.ini  everforest.ini  hotdogstand.ini  kat.ini  machinery.ini  seoul.ini
plugins/magiccarpet/: CMakeLists.txt
plugins/magiccarpet/source/: editor.cpp  editor.h  functions.h  processor.cpp  processor.h
plugins/modman/: CMakeLists.txt
plugins/modman/source/: curves.cpp  curves.h  editor.cpp  editor.h  includes.h  perlin.cpp  perlin.h  processor.cpp  processor.h
plugins/mpaint/: CMakeLists.txt  how to install MPaint (mac).txt  how to install MPaint.txt  how_to_install_mpaint.txt  how_to_install_mpaint_mac.txt
plugins/mpaint/source/: editor.cpp  editor.h  processor.cpp
plugins/pisstortion/: CMakeLists.txt
plugins/pisstortion/source/: dc_filter.h  editor.cpp  editor.h  processor.cpp  processor.h
plugins/plasticfuneral/: CMakeLists.txt
plugins/plasticfuneral/source/: editor.cpp  editor.h  processor.cpp
plugins/pnch/: CMakeLists.txt
plugins/pnch/source/: editor.cpp  editor.h  processor.cpp  processor.h
plugins/prisma/: CMakeLists.txt
plugins/prisma/prisma/: CMakeLists.txt
plugins/prisma/prismon/: CMakeLists.txt
plugins/prisma/source/: dc_filter.cpp  dc_filter.h  dcfilter.h  editor.cpp  editor.h  includes.h  oversampling.cpp  oversampling.h  processor.cpp  processor.h
plugins/proto/: CMakeLists.txt
plugins/proto/source/: editor.cpp  editor.h  includes.h  processor.cpp
plugins/redbass/: CMakeLists.txt
plugins/redbass/source/: editor.cpp  editor.h  includes.h  processor.cpp  processor.h
plugins/redvj/source/: editor.cpp  editor.h  processor.h
plugins/scope/: CMakeLists.txt
plugins/scope/source/: editor.cpp  editor.h  functions.cpp  functions.h  processor.cpp  processor.h  settings.cpp  settings.h
plugins/sucrose/: CMakeLists.txt
plugins/sucrose/source/: editor.cpp  editor.h  functions.cpp  functions.h  includes.h  perlin.cpp  processor.cpp  processor.h
plugins/sucrose/source/dsp/: core.h  filter.h  harmonic.h  hilbert.h  util.h
plugins/sunburnt/: CMakeLists.txt
plugins/sunburnt/Source/: curves.cpp  editor.h  functions.cpp  functions.h  impulsethread.cpp  processor.cpp
plugins/sunburnt/source/: editor.cpp  editor.h  processor.cpp
plugins/tripled/: CMakeLists.txt
plugins/tripled/source/: dc_filter.cpp  editor.cpp  editor.h  processor.cpp  processor.h
plugins/vu/: CMakeLists.txt
plugins/vu/source/: editor.cpp  editor.h  functions.cpp  processor.cpp  processor.h  settings.cpp  settings.h
pluginss/redvj/: CMakeLists.txt
pluginss/redvj/source/: processor.cpp
setup/: innosetup everything.iss  innosetup.iss
setupp/: innosetup everything.iss  productbuild.py
(+173 files in other folders)
