add_subdirectory(plasticfuneral)
add_subdirectory(vu)
add_subdirectory(clickbox)
add_subdirectory(pisstortion)
add_subdirectory(pnch)
add_subdirectory(proto)
add_subdirectory(redbass)
add_subdirectory(mpaint)
add_subdirectory(crmbl)
add_subdirectory(prisma)
add_subdirectory(sunburnt)
add_subdirectory(dietaudio)
add_subdirectory(scope)
